Finally remove scrollbar + fix css avatars

--- a/public/assets/css/_settings.scss
+++ b/public/assets/css/_settings.scss
@@ -118,7 +118,7 @@ ICONS / BUTTONS
 }
 
 .button-icon {
-  width: 40px !important;
+  width: 40px;
   border-radius: 20%;
   -webkit-box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.75);
@@ -154,34 +154,6 @@ ICONS / BUTTONS
   border-radius: 50%;
   -webkit-filter: drop-shadow(5px 5px 5px black);
   filter: drop-shadow(5px 5px 5px black);
-}
-
-
-/*S C R O L L B A R */
-::-webkit-scrollbar 
-{
-    width: 12px;
-    overflow: hidden;
-}
-
-::-webkit-scrollbar-thumb:hover
-{
-    -webkit-box-shadow: inset 0 0 6px var(--secondary-color);;
-    box-shadow: inset 0 0 6px var(--secondary-color);; 
-}
- 
-::-webkit-scrollbar-track
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 10px;
-}
- 
-::-webkit-scrollbar-thumb
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-    border-radius: 10px;
 }
 
 
