--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -257,12 +257,9 @@ box-shadow: inset 0px 0px 10px 5px rgba(0,0,0,0.75);
 }
 
 .avatar-mini img {
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
-  -webkit-box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.75);
 }
 
 .card-title {
@@ -296,6 +293,7 @@ SHOPPING LIST
 .list-container {
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 #shopping_list_description {
@@ -378,9 +376,11 @@ MODAL
   color: var(--tertiary-color);
 }
 
-.comment-control {
-  display: flex;
+.comment-control .button-icon {
+  width: 20px;
+  margin-bottom: 2rem;
 }
+
 
 .modal-header h5,
 .modal-body span {
